# trs_labs

./: .gitignore  CMakeLists.txt  README.md
data/: Лабораторная работа ТРС 4.docx  Требования к отчету и контрольные вопросы.docx
lab1/: CMakeLists.txt
lab1/example/: CMakeLists.txt  main.cpp
lab1/include/: include.h  task1.h
lab1/labs_example/: CMakeLists.txt  main.cpp
lab1/plot/: plot.py
lab1/src/: CMakeLists.txt
lab1/test/: CMakeLists.txt  test.cpp
lab_1/: CMakeLists.txt  TRS1.cpp  lab1.cpp  trs_lab1.cpp
lab_2/: CMakeLists.txt  task_1.cpp  task_2.cpp  task_3.cpp  task_4.cpp
lab_3/: CMakeLists.txt  TRS3.cpp  lab3.cpp  task_1.cpp  task_2.cpp  task_3.cpp
lab_4/: CMakeLists.txt  TRS4.cpp  lab4.cpp  task_1_2.cpp  task_3.cpp
output/lab_1/: z1_v10.txt  z1_v100.txt  z1_v1000.txt  z1_v10000.txt  z1_x10.txt  z1_x100.txt  z1_x1000.txt  z1_x10000.txt  z2_v10.txt  z2_v100.txt  z2_v1000.txt  z2_v10000.txt  z2_x10.txt  z2_x100.txt  z2_x1000.txt  z2_x10000.txt  z3_v10.txt  z3_v100.txt  z3_v1000.txt  z3_v10000.txt  z3_x10.txt  z3_x100.txt  z3_x1000.txt  z3_x10000.txt
output/lab_2/: error.txt  z1_1.txt  z1_error.txt  z1_error1.txt  z2_p11.txt  z2_p12.txt  z2_p13.txt  z2_p1_error1.txt  z2_p1_error2.txt  z2_p1_error3.txt  z2_p21.txt  z2_p22.txt  z2_p23.txt  z2_p2_error1.txt  z2_p2_error2.txt  z2_p2_error3.txt  z3_u0.txt  z3_u1.txt  z3_u_error0.txt  z3_u_error1.txt  z4_u0.txt  z4_u1.txt
output/lab_3/: task1_10.txt  task1_20.txt  task1_30.txt  task1_4.txt  task1_40.txt  task1_50.txt  task1_60.txt  task1_error_10.txt  task1_error_20.txt  task1_error_30.txt  task1_error_4.txt  task1_error_40.txt  task1_error_60.txt  task2_20.txt  task2_30.txt  task2_40.txt  task2_50.txt  task2_60.txt  task2_error_10.txt  task2_error_20.txt  task2_error_30.txt  task2_error_4.txt  task2_error_50.txt  task3_10.txt  task3_4.txt  task3_error_40.txt  task3_error_50.txt  task3_error_60.txt  task4_10.txt  task4_20.txt  task4_30.txt  task4_4.txt  task4_40.txt  task4_50.txt  task4_60.txt  task4_eigen_10.txt  task4_eigen_20.txt  task4_eigen_30.txt  task4_eigen_4.txt  (+20 more)
plot/: Untitled.ipynb  lab1.ipynb  lab2.ipynb  lab2_test.ipynb  lab3.ipynb  lab4.ipynb  графики.py
report/: ~$ЛР1.docx  ~$ЛР2.docx  ЛР2.docx  ЛР3.docx  ЛР4.docx
(+2 files in other folders)
