cmake_minimum_required(VERSION 3.10)


add_executable(lab_3_task1 task_1.cpp)
add_executable(lab_3_task2 task_2.cpp)
add_executable(lab_3_task3 task_3.cpp)

#target_include_directories(lab_3_task1 PRIVATE Eigen)
#target_include_directories(lab_3_task2 PRIVATE Eigen)
#target_include_directories(lab_3_task3 PRIVATE Eigen)